dep bump, rename / deprecate / new methods in base utils and remove use of deprecated methods